--- a/index.html
+++ b/index.html
@@ -24,44 +24,63 @@
           <span class="id">praks@Prakriti's-Macbook-Pro</span>
           <span class="main">(main)</span>
           <span class="arrow"> ~></span>
-          <span id="text">cat ./about.txt</span>
+          <span id="text2" class = "text">cat ./about.txt</span>
         </div>
 
         <div class="third-line">
           <span class="id">praks@Prakriti's-Macbook-Pro</span>
           <span class="main">(main)</span>
-          <span class="arrow"> ~></span>
-          <span id="introPara"
+          <span class="arrow" > ~></span>
+          <span id="introPara" class="text"
             >Hi, You just stepped into Prakriti's public terminal. I am
             currently being built up. Once ready, I will walk you through the
             life of Prakriti aka praks. You will be able to ask me about his
             areas of interests, hobbies, professional experiences and much more.
             Currently, I am built to support desktop version. I'll be soon
             available on mobile. Pardon me for any inconvenience and you can
-            always reach out to the developer (prakritigupta1112002@gmail.com) for any
-            queries/suggestions. As I continue to develop, you can always
-            checkout my current features. Looking forward to an amazing
+            always reach out to the developer (prakritigupta1112002@gmail.com)
+            for any queries/suggestions. As I continue to develop, you can
+            always checkout my current features. Looking forward to an amazing
             interaction.
           </span>
         </div>
-
 
         <div class="forth-line">
           <span class="id">praks@Prakriti's-Macbook-Pro</span>
           <span class="main">(main)</span>
           <span class="arrow"> ~></span>
-          <span id ="info">To get started ; type help and press Enter!</span>
+          <span id="info" class="text">To get started ; type help and press Enter!</span>
         </div>
-
 
         <div class="fifth-line">
           <span class="id">praks@Prakriti's-Macbook-Pro</span>
           <span class="main">(main)</span>
           <span class="arrow"> ~></span>
           <span>
-            <input type="text" id="help" value="help">
+            <input type="text" id="help" value="help" />
           </span>
         </div>
+
+        <div class="second-page-second-line">
+          <span class="id">praks@Prakriti's-Macbook-Pro</span>
+          <span class="main">(main)</span>
+          <span class="arrow"> ~></span>
+          <span id = "second-page-second-para" class="text">
+            Saluton (Esperanto)! Request will only be processed for the following options: help, resume, bio, linkedin, random, github, contact, date. But don't try to gain access by running commands like sudo. These commands will come soon: projects, sama, clear, new, man, home
+          </span>
+        </div>
+
+        <div class="second-page-third-line">
+          <span class="id">praks@Prakriti's-Macbook-Pro</span>
+          <span class="main">(main)</span>
+          <span class="arrow"> ~></span>
+          <span>
+            <input type="text" id="help2" value="help" />
+          </span>
+        </div>
+
+        
+        
       </div>
     </div>
     <script src="./script.js"></script>
